Removing index image, Adding contcat in the first page

--- a/_config.yml
+++ b/_config.yml
@@ -168,8 +168,8 @@ about:
 ###########
 
 email: "meenakshi.f07@gmail.com"
-phone_number: "4088290255" 
-location: "Santa Clara, CA 95051"
+phone_number: "(408) 829-0255" 
+location: "2651 Barcells Ave, Santa Clara, CA 95051"
 
 
 # Set a url pointing to your publish PGP Public Key here, and it will appear in the Contact section
